# rust-lang-estudos

./: README.md
calc_imc/: Cargo.toml
calc_imc/src/: main.rs
diesel_demo/: .gitignore  Cargo.toml
diesel_demo/migrations/2022-09-09-222518_create_posts/: up.sql
diesel_demo/src/: database.rs  main.rs  models.rs  schema.rs
diesel_demo/src/actions/: mod.rs
diesel_demo/src/actions/menu/: mod.rs
diesel_demo/src/actions/post/: mod.rs
fn_rust/: Cargo.toml
fn_rust/src/: main.rs
guessing_game/src/: main.rs
reqwest_github/: Cargo.toml
reqwest_github/src/: main.rs
sea-orm-demo/: .gitignore  Cargo.toml
sea-orm-demo/entity/src/: lib.rs  posts.rs  prelude.rs
sea-orm-demo/migration/: Cargo.toml
sea-orm-demo/src/: database.rs  main.rs
sea-orm-demo/src/lib/: post.rs
sorting/: .gitignore
