[package]
name = "sea_orm_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".","entity", "migration"]

[dependencies]
tokio = { versions = "1.21.0", features = ["full"]}
dotenvy = { versions = "0.15.3"}
sea-orm = { versions = "^0", features = ["sqlx-sqlite","runtime-tokio-native-tls" ,"macros"]}

migration = { path = "migration" } # depends on your needs
entity = { path = "entity" }
